Change z-index of flap and courses to fix safari bug

--- a/style.css
+++ b/style.css
@@ -354,6 +354,7 @@ h3 {
     transition: transform;
     border-radius: 30px;
     opacity: 0.7;
+    z-index: 1;
 }
 
 /* .flap-text {
@@ -617,6 +618,7 @@ h3 {
     letter-spacing: 1px;
     overflow: hidden;
     justify-content: space-between;
+    z-index: 1;
 }
 
 .course-title {
